terraform/sg_lb.tf
resource "aws_security_group" "elb" {
  name_prefix = "elb-"
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
